--- a/jobs/smoke_tests/templates/config.json.erb
+++ b/jobs/smoke_tests/templates/config.json.erb
@@ -28,16 +28,16 @@
   "password"                       : "<%= properties.smoke_tests.password %>",
   "org"                            : "<%= properties.smoke_tests.org %>",
   "space"                          : "<%= properties.smoke_tests.space %>",
-  "use_existing_org"               : "<%= properties.smoke_tests.use_existing_org %>",
-  "use_existing_space"             : "<%= properties.smoke_tests.use_existing_space %>",
+  "use_existing_org"               : <%= properties.smoke_tests.use_existing_org %>,
+  "use_existing_space"             : <%= properties.smoke_tests.use_existing_space %>,
   "logging_app"                    : "<%= properties.smoke_tests.logging_app %>",
   "runtime_app"                    : "<%= properties.smoke_tests.runtime_app %>",
-  "skip_ssl_validation"            : "<%= properties.smoke_tests.skip_ssl_validation %>",
+  "skip_ssl_validation"            : <%= properties.smoke_tests.skip_ssl_validation %>,
   "syslog_drain_port"              : 514,
   "syslog_ip_address"              : "<%= discover_external_ip %>",
-  "enable_windows_tests"           : "<%= properties.smoke_tests.enable_windows_tests %>",
+  "enable_windows_tests"           : <%= properties.smoke_tests.enable_windows_tests %>,
   "backend"                        : "<%= properties.smoke_tests.backend %>",
   "isolation_segment_name"         : "<%= properties.smoke_tests.isolation_segment_name %>",
   "isolation_segment_domain"       : "<%= properties.smoke_tests.isolation_segment_domain %>",
-  "enable_isolation_segment_tests" : "<%= properties.smoke_tests.enable_isolation_segment_tests %>"
+  "enable_isolation_segment_tests" : <%= properties.smoke_tests.enable_isolation_segment_tests %>
 }
