--- a/jobs/smoke_tests/templates/config.json.erb
+++ b/jobs/smoke_tests/templates/config.json.erb
@@ -40,6 +40,6 @@
   "isolation_segment_name"          : "<%= properties.smoke_tests.isolation_segment_name %>",
   "isolation_segment_domain"        : "<%= properties.smoke_tests.isolation_segment_domain %>",
   "enable_etcd_cluster_check_tests" : <%= properties.smoke_tests.enable_etcd_cluster_check_tests %>,
-  "etcd_ip_address"                 : "<%= properties.smoke_tests.etcd_ip_address %>"
+  "etcd_ip_address"                 : "<%= properties.smoke_tests.etcd_ip_address %>",
   "enable_isolation_segment_tests"  : <%= properties.smoke_tests.enable_isolation_segment_tests %>
 }
