Add bpm feature flag and default it to false [#161496229]
Signed-off-by: Iryna Shustava <ishustava@pivotal.io>

--- a/jobs/smoke_tests/templates/run.erb
+++ b/jobs/smoke_tests/templates/run.erb
@@ -2,4 +2,8 @@
 
 set -e
 
+<% if p("bpm.enabled") %>
 /var/vcap/jobs/bpm/bin/bpm run smoke_tests
+<% else %>
+/var/vcap/jobs/smoke_tests/bin/test
+<% end %>
