Update job and packaging for Golang 1.17 changes

--- a/jobs/smoke_tests/templates/test.erb
+++ b/jobs/smoke_tests/templates/test.erb
@@ -10,7 +10,7 @@ export PATH=${GOPATH}/bin:${PATH}
 
 export CONFIG=/var/vcap/jobs/smoke_tests/config/config.json
 
-cd /var/vcap/packages/smoke_tests/src/github.com/cloudfoundry/cf-smoke-tests
+cd /var/vcap/packages/smoke_tests/src/smoke_tests
 
 <% if_p("smoke_tests.cf_dial_timeout_in_seconds") do |timeout| %>
 export CF_DIAL_TIMEOUT=<%= timeout %>
