Upgrade to ginkgo v2
* The slow spec threshold flag has changed to `--slow-spec-threshold` in
  v2, and it requires a unit to be given.
* `go install` commands should be given the correct v2 import path.

--- a/jobs/smoke_tests_windows/templates/run.ps1.erb
+++ b/jobs/smoke_tests_windows/templates/run.ps1.erb
@@ -15,7 +15,7 @@ cd c:\var\vcap\packages\smoke_tests_windows\src\github.com\cloudfoundry\cf-smoke
 New-Item -Path "$env:GOPATH\src" -ItemType Directory -Force
 Copy-Item -Recurse -Force ".\vendor\*" "$env:GOPATH\src\"
 
-go.exe install github.com/onsi/ginkgo/ginkgo
+go.exe install github.com/onsi/ginkgo/v2/ginkgo
 
 $env:CONFIG="c:\var\vcap\jobs\smoke_tests_windows\bin\config.json"
 <% if_p("smoke_tests.cf_dial_timeout_in_seconds") do |timeout| %>
