Vendor latest 1.x golang packages
This hastily backtracks on the approach in pr #11 (https://github.com/cloudfoundry/cf-smoke-tests-release/pull/11) to specifically vendor the package the version of go in cf-smoke-tests' go.mod file. While perhaps making things marginally safer, that approach would result in us gradually vendoring ever-increasing numbers of packages named after different versions of go (golang-1.18-linux, golang-1.19-windows, etc) which would then need to be cleaned up.

On reflection it's way simpler to just vendor the latest 1.x version from bosh-packages/golang-release. If we ensure we always take the latest version from the golang-release to bump both bosh go packages and the go.mod file in cf-smoke-tests, there should never be a conflict. New go versions will always be vendored as golang-1-linux and golang-1-windows, and will overwrite the old ones without the need to cleanup or update references to them.

--- a/jobs/smoke_tests/templates/test.erb
+++ b/jobs/smoke_tests/templates/test.erb
@@ -2,7 +2,7 @@
 
 set -e
 
-export GOROOT=$(readlink -nf /var/vcap/packages/golang-1.18-linux)
+export GOROOT=$(readlink -nf /var/vcap/packages/golang-1-linux)
 export GOPATH=/var/vcap/packages/smoke_tests
 export PATH=${GOROOT}/bin:${PATH}
 export PATH=/var/vcap/packages/cf-cli-8-linux/bin:${PATH} # put the cli on the path
