--- a/jobs/smoke_tests_windows/templates/config.json.erb
+++ b/jobs/smoke_tests_windows/templates/config.json.erb
@@ -13,6 +13,9 @@
   "user"                            : "<%= user %>",
   "password"                        : "<%= password %>",
 <% end %>
+<% if_p("smoke_tests.timeout_scale") do |timeout_scale| %>
+  "timeout_scale"                   : "<%= timeout_scale %>",
+<% end %>
   "org"                             : "<%= properties.smoke_tests.org %>",
   "space"                           : "<%= properties.smoke_tests.space %>",
   "use_existing_org"                : <%= properties.smoke_tests.use_existing_org %>,
